--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
-modLoader = "javafml"
-loaderVersion = "[2,)"
+modLoader = "kotlinforforge"
+loaderVersion = "[${versions.kotlin_forge},)"
 #issueTrackerURL = ""
 license = "MIT"
 
